Add conversational chat agent integration with persistence via SPRING_AI_CHAT_MEMORY, system prompt composer, and full test coverage (unit, REST, Postman).